--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
 </head>
 
 <body>
@@ -19,7 +16,7 @@
   <main role="main">
 
     <!-- SIGN IN -->
-    <section id="log-in" class="cont">
+    <section id="log-in">
       <form class="signin-form">
         <h2>Log in</h2>
 
@@ -39,18 +36,10 @@
     </section>
 
     <!-- SIGN UP -->
-    <section id="sign-up" class="sub-cont">
+    <section id="sign-up">
 
       <form class="signup-form">
         <h2>Sign up</h2>
-        <!-- 
-				<label for="firstname">First Name
-					<input type="text" id="firstname" name="firstname"/>
-				</label>
-		      
-				<label for="lastname">Last Name
-					<input type="text" id="lastname" name="lastname"/>
-				</label> -->
 
         <label for="new-username">Username
           <input type="text" id="new-username" name="new-username" />
