--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       </form>
     </section>
 
-    <section class="user-page hidden">
+    <section class="user-page ">
       <form>
         <h2>Add a place and details about your visit</h2>
 
