front end request handling

--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,11 @@
         <button type="button" id="submit-entry-button" role="button">Save</button>
       </form>
 
+      <!-- add entry modal -->
+      <div class="add-entry-modal hidden"></div>
+
       <!-- entries go here -->
-      <div class="entries"></div>
+      <ul class="entries-results"></ul>
 
     </section>
 
