--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Yappr</title>
+  <title>Yappr. Travel blogging, made easy.</title>
   <meta name="description" content="Automate your travel blogging.">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,6 @@
 <body>
   <main role="main" aria-live="polite">
     <img src="/img/yappr-logo-large.png" class="icon-large" alt="The yapper logo, a mountain">
-
     <!-- Log in form -->
     <form class="login-form" name="login-user" action="#">
       <fieldset>
